[package]
name = "ltr-559"
authors = ["Ioan Herisanu <ioan.herisanu.dev@gmail.com>"]
categories = ["no-std"]
description = "LITEON LTR-559 ligth and proximity sensor"
documentation = "https://docs.rs/ltr-559"
homepage = "https://github.com/iohe/ltr-559"
keywords = ["ltr-559"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/iohe/ltr-559.git"
version = "0.1.0"
edition = "2018"

[badges]
travis-ci = { repository = "iohe/ltr-559", branch = "master" }
coveralls = { repository = "iohe/ltr-559", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.1"

[dev-dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
linux-embedded-hal = "0.3.0"
rppal = { version = "0.11.3", features = ["hal"] }

