[package]
name = "ltr-559"
authors = ["Ioan Herisanu <ioan.herisanu.dev@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "LITEON LTR-559 ligth and proximity sensor"
documentation = "https://docs.rs/ltr-559"
homepage = "https://github.com/iohe/ltr-559"
keywords = ["ltr-559"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/iohe/ltr-559.git"
version = "0.1.1"
edition = "2018"

[badges]
travis-ci = { repository = "iohe/ltr-559", branch = "master" }
coveralls = { repository = "iohe/ltr-559", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.5"
nb = "0.1.1"

[dev-dependencies]
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-hal-mock = "0.7.2"
linux-embedded-hal = "0.3.0"
rppal = { version = "0.14.1", features = ["hal"] }

[profile.release]
lto = true

